# pytest-splinter4-01

./: pyproject.toml  setup.py
pytest_splinter4/: plugin.py
tests/mocked_browser/: test_screenshot.py
